@@ -1,6 +1,7 @@
 package com.baidu.rtc.logreport;
 
 import android.text.TextUtils;
+import android.util.Log;
 import androidx.core.view.InputDeviceCompat;
 import com.baidu.android.imsdk.internal.Constants;
 import com.baidu.rtc.PeerConnectionClient;
@@ -16,7 +17,6 @@ import com.tachikoma.core.component.input.ReturnKeyType;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Map;
-import org.apache.commons.lang3.StringUtils;
 import org.webrtc.StatsReport;
 /* loaded from: classes4.dex */
 public class HUDStatistics {
@@ -107,9 +107,9 @@ public class HUDStatistics {
         if (interceptable != null) {
             InitContext newInitContext = TitanRuntime.newInitContext();
             interceptable.invokeUnInit(65537, newInitContext);
-            int i2 = newInitContext.flag;
-            if ((i2 & 1) != 0) {
-                int i3 = i2 & 2;
+            int i = newInitContext.flag;
+            if ((i & 1) != 0) {
+                int i2 = i & 2;
                 newInitContext.thisArg = this;
                 interceptable.invokeInitBody(65537, newInitContext);
                 return;
@@ -134,10 +134,10 @@ public class HUDStatistics {
         InterceptResult invokeV;
         Interceptable interceptable = $ic;
         if (interceptable == null || (invokeV = interceptable.invokeV(65538, this)) == null) {
-            int i2 = this.mFrameEncoded - this.mOldFrameEncoded;
-            int i3 = this.mVideoQPSum - this.mOldVideoQPSum;
-            if (i2 != 0) {
-                return i3 / i2;
+            int i = this.mFrameEncoded - this.mOldFrameEncoded;
+            int i2 = this.mVideoQPSum - this.mOldVideoQPSum;
+            if (i != 0) {
+                return i2 / i;
             }
             return 0;
         }
@@ -169,7 +169,7 @@ public class HUDStatistics {
                     this.mAudioJitterBufferMs = Integer.valueOf(str).intValue();
                 }
             } catch (NumberFormatException e2) {
-                String str2 = "parseAudioRecvStatsReport" + e2;
+                Log.e("HUDStatistic", "parseAudioRecvStatsReport" + e2);
             }
             this.mAudioCurrentDelay = map.get("googCurrentDelayMs");
             this.mAudioRecvCodec = map.get("googCodecName");
@@ -198,7 +198,7 @@ public class HUDStatistics {
                 this.mAvailableSendBW = RTCBitrateTracker.bitrateStringForBitrate(Double.parseDouble(map.get("googAvailableSendBandwidth")));
                 this.mAvailableRevBW = RTCBitrateTracker.bitrateStringForBitrate(Double.parseDouble(map.get("googAvailableReceiveBandwidth")));
             } catch (NumberFormatException e2) {
-                String str = "parseBweStatsReport: " + e2;
+                Log.e("HUDStatistics", "parseBweStatsReport: " + e2);
             }
         }
     }
@@ -214,7 +214,7 @@ public class HUDStatistics {
                 this.mConnSendBitrateTradker.updataBitrateWidhCurrentByteCount(Long.parseLong(map.get("bytesSent")));
                 this.mConnSendBitrate = this.mConnSendBitrateTradker.bitRateString();
             } catch (NumberFormatException e2) {
-                String str3 = "parseConnectionStatsReport" + e2;
+                Log.e("HUDStatistics", "parseConnectionStatsReport" + e2);
             }
             this.mConnRtt = map.get("googRtt");
             this.mLocalCandType = map.get("googLocalCandidateType");
@@ -224,9 +224,9 @@ public class HUDStatistics {
                 ErrorInfoReport.getInstance().setClientIp(str2);
             }
             if (map.containsKey("googRemoteAddress")) {
-                String str4 = map.get("googRemoteAddress").split(":")[0];
-                this.mRemoteIp = str4;
-                if (str4 != null) {
+                String str3 = map.get("googRemoteAddress").split(":")[0];
+                this.mRemoteIp = str3;
+                if (str3 != null) {
                     ErrorInfoReport.getInstance().setRemoteIp(this.mRemoteIp);
                 }
             }
@@ -253,7 +253,6 @@ public class HUDStatistics {
     }
 
     private void parseVideoSendStatsReport(Map<String, String> map) {
-        String str;
         Interceptable interceptable = $ic;
         if (interceptable == null || interceptable.invokeL(65545, this, map) == null) {
             this.mVideoEncodeMs = map.get("googAvgEncodeMs");
@@ -267,7 +266,8 @@ public class HUDStatistics {
             this.mVideoSendPacketLost = map.get("packetsLost");
             this.mVideoPacketSend = map.get("packetsSent");
             try {
-                if (map.get("bytesSent") != null) {
+                String str = map.get("bytesSent");
+                if (str != null) {
                     this.mVideoSendBitrateTracker.updataBitrateWidhCurrentByteCount(Integer.parseInt(str));
                 }
                 this.mVideoSendBitrate = this.mVideoSendBitrateTracker.bitRateString();
@@ -282,22 +282,22 @@ public class HUDStatistics {
                     this.mFrameEncoded = Integer.parseInt(str3);
                 }
             } catch (NumberFormatException e2) {
-                String str4 = "parseVideoSendStatsReport: " + e2;
+                Log.e("HUDStatistic", "parseVideoSendStatsReport: " + e2);
             }
         }
     }
 
-    public void addAudioStuckData(long j2, long j3) {
+    public void addAudioStuckData(long j, long j2) {
         Interceptable interceptable = $ic;
-        if (interceptable == null || interceptable.invokeCommon(1048576, this, new Object[]{Long.valueOf(j2), Long.valueOf(j3)}) == null) {
-            this.audioStuckList.add(Long.valueOf(j3 - j2));
+        if (interceptable == null || interceptable.invokeCommon(1048576, this, new Object[]{Long.valueOf(j), Long.valueOf(j2)}) == null) {
+            this.audioStuckList.add(Long.valueOf(j2 - j));
         }
     }
 
-    public void addVideoStuckData(long j2, long j3) {
+    public void addVideoStuckData(long j, long j2) {
         Interceptable interceptable = $ic;
-        if (interceptable == null || interceptable.invokeCommon(Constants.METHOD_GET_CONTACTER_INFO_FOR_SESSION, this, new Object[]{Long.valueOf(j2), Long.valueOf(j3)}) == null) {
-            this.videoStuckList.add(Long.valueOf(j3 - j2));
+        if (interceptable == null || interceptable.invokeCommon(Constants.METHOD_GET_CONTACTER_INFO_FOR_SESSION, this, new Object[]{Long.valueOf(j), Long.valueOf(j2)}) == null) {
+            this.videoStuckList.add(Long.valueOf(j2 - j));
         }
     }
 
@@ -325,7 +325,7 @@ public class HUDStatistics {
                 }
                 return -1;
             } catch (NumberFormatException unused) {
-                String str = "getEndTOEndTime error format :" + this.mEndToEndTime;
+                Log.e("HUDStatistics", "getEndTOEndTime error format :" + this.mEndToEndTime);
                 return -1;
             }
         }
@@ -372,42 +372,50 @@ public class HUDStatistics {
 
     public void getStatsRecvInfo(Map<String, Integer> map) {
         Interceptable interceptable = $ic;
-        if (!(interceptable == null || interceptable.invokeL(1048586, this, map) == null) || this.mVideoRecvBitrate == null || this.mVideoRecvPacketLost == null || this.mVideoRecvFps == null || map == null) {
-            return;
-        }
-        try {
-            new Long(0L);
-            if (Long.parseLong(this.mVideoPacketRecv) != 0) {
-                this.mVideoRecvPacketLostRatio = Long.valueOf((Long.parseLong(this.mVideoRecvPacketLost) * 1000) / Long.parseLong(this.mVideoPacketRecv)).intValue();
+        if (interceptable == null || interceptable.invokeL(1048586, this, map) == null) {
+            if (this.mVideoRecvBitrate != null && this.mVideoRecvPacketLost != null && this.mVideoRecvFps != null && map != null) {
+                try {
+                    new Long(0L);
+                    if (Long.parseLong(this.mVideoPacketRecv) != 0) {
+                        this.mVideoRecvPacketLostRatio = Long.valueOf((Long.parseLong(this.mVideoRecvPacketLost) * 1000) / Long.parseLong(this.mVideoPacketRecv)).intValue();
+                    }
+                    map.put("bitrate_r", Integer.valueOf(RTCBitrateTracker.bitrateToString(this.mVideoRecvBitrate) / 1000));
+                    map.put("packetlost", Integer.valueOf(Integer.parseInt(this.mVideoRecvPacketLost)));
+                    map.put("packetloss_r", Integer.valueOf(this.mVideoRecvPacketLostRatio));
+                    map.put("fps_r", Integer.valueOf(this.mVideoRecvFps));
+                    return;
+                } catch (NumberFormatException e2) {
+                    Log.e("HUDStatistics", "getStatsRecvInfo: " + e2);
+                    return;
+                }
             }
-            map.put("bitrate_r", Integer.valueOf(RTCBitrateTracker.bitrateToString(this.mVideoRecvBitrate) / 1000));
-            map.put("packetlost", Integer.valueOf(Integer.parseInt(this.mVideoRecvPacketLost)));
-            map.put("packetloss_r", Integer.valueOf(this.mVideoRecvPacketLostRatio));
-            map.put("fps_r", Integer.valueOf(this.mVideoRecvFps));
-        } catch (NumberFormatException e2) {
-            String str = "getStatsRecvInfo: " + e2;
+            Log.e("HUDStatistics", "getStatsRecvInfo null");
         }
     }
 
     public void getStatsSendInfo(Map<String, Integer> map) {
-        String str;
         Interceptable interceptable = $ic;
-        if (!(interceptable == null || interceptable.invokeL(1048587, this, map) == null) || (str = this.mVideoSendBitrate) == null || this.mVideoSendFps == null || this.mVideoInputFps == null || this.mVideoSendHeight == null || map == null) {
-            return;
-        }
-        map.put("bitrate_s", Integer.valueOf(RTCBitrateTracker.bitrateToString(str) / 1000));
-        try {
-            Long l = new Long(0L);
-            if (Long.parseLong(this.mVideoPacketSend) != 0) {
-                l = Long.valueOf((Long.parseLong(this.mVideoSendPacketLost) * 1000) / Long.parseLong(this.mVideoPacketSend));
+        if (interceptable == null || interceptable.invokeL(1048587, this, map) == null) {
+            String str = this.mVideoSendBitrate;
+            if (str != null && this.mVideoSendFps != null && this.mVideoInputFps != null && this.mVideoSendHeight != null && map != null) {
+                map.put("bitrate_s", Integer.valueOf(RTCBitrateTracker.bitrateToString(str) / 1000));
+                try {
+                    Long l = new Long(0L);
+                    if (Long.parseLong(this.mVideoPacketSend) != 0) {
+                        l = Long.valueOf((Long.parseLong(this.mVideoSendPacketLost) * 1000) / Long.parseLong(this.mVideoPacketSend));
+                    }
+                    map.put("packetlost", Integer.valueOf(Integer.parseInt(this.mVideoSendPacketLost)));
+                    map.put("packesend", Integer.valueOf(Integer.parseInt(this.mVideoPacketSend)));
+                    map.put("packetloss_s", Integer.valueOf(l.intValue()));
+                    map.put("fps_s", Integer.valueOf(this.mVideoSendFps));
+                    map.put("fps_i", Integer.valueOf(this.mVideoInputFps));
+                    return;
+                } catch (NumberFormatException e2) {
+                    Log.e("HUDStatistics", "getStatsSendInfo: " + e2);
+                    return;
+                }
             }
-            map.put("packetlost", Integer.valueOf(Integer.parseInt(this.mVideoSendPacketLost)));
-            map.put("packesend", Integer.valueOf(Integer.parseInt(this.mVideoPacketSend)));
-            map.put("packetloss_s", Integer.valueOf(l.intValue()));
-            map.put("fps_s", Integer.valueOf(this.mVideoSendFps));
-            map.put("fps_i", Integer.valueOf(this.mVideoInputFps));
-        } catch (NumberFormatException e2) {
-            String str2 = "getStatsSendInfo: " + e2;
+            Log.e("HUDStatistics", "getStatsSendInfo null");
         }
     }
 
@@ -429,26 +437,26 @@ public class HUDStatistics {
         return (interceptable == null || (invokeV = interceptable.invokeV(1048590, this)) == null) ? this.mHasVideo : invokeV.booleanValue;
     }
 
-    public void setFirstFrameTime(long j2) {
+    public void setFirstFrameTime(long j) {
         Interceptable interceptable = $ic;
-        if (interceptable == null || interceptable.invokeJ(1048591, this, j2) == null) {
-            this.firstFrameTime = j2;
+        if (interceptable == null || interceptable.invokeJ(1048591, this, j) == null) {
+            this.firstFrameTime = j;
         }
     }
 
-    public void setRequestSubscribeTime(long j2) {
+    public void setRequestSubscribeTime(long j) {
         Interceptable interceptable = $ic;
-        if (interceptable == null || interceptable.invokeJ(1048592, this, j2) == null) {
-            this.requestSubscribeTime = j2;
+        if (interceptable == null || interceptable.invokeJ(1048592, this, j) == null) {
+            this.requestSubscribeTime = j;
         }
     }
 
-    public String statsString(int i2) {
+    public String statsString(int i) {
         InterceptResult invokeI;
         Interceptable interceptable = $ic;
-        if (interceptable == null || (invokeI = interceptable.invokeI(1048593, this, i2)) == null) {
+        if (interceptable == null || (invokeI = interceptable.invokeI(1048593, this, i)) == null) {
             StringBuilder sb = new StringBuilder();
-            if ((i2 & 16) != 0) {
+            if ((i & 16) != 0) {
                 sb.append("Delay: ");
                 sb.append(this.mConnRtt);
                 sb.append("ms  |  ");
@@ -463,9 +471,9 @@ public class HUDStatistics {
                 sb.append(this.mConnRecvBitrate);
                 sb.append(" | remote ->");
                 sb.append(this.mRemoteIp);
-                sb.append(StringUtils.LF);
+                sb.append("\n");
             }
-            if ((i2 & 8) != 0) {
+            if ((i & 8) != 0) {
                 int calculateAvgQP = calculateAvgQP();
                 sb.append("VideoCap:");
                 sb.append(this.mVideoInputWidth);
@@ -492,14 +500,14 @@ public class HUDStatistics {
                 sb.append(this.mVideoEncodeMs);
                 sb.append("ms  |  ");
                 sb.append(this.mVideoSendCodec);
-                sb.append(StringUtils.LF);
+                sb.append("\n");
                 sb.append("AvgQP (past ");
                 sb.append(this.mFrameEncoded);
                 sb.append(" encoded frames) = ");
                 sb.append(calculateAvgQP);
-                sb.append(StringUtils.LF);
+                sb.append("\n");
             }
-            if ((i2 & 2) != 0) {
+            if ((i & 2) != 0) {
                 sb.append("VideoRecv: ");
                 sb.append(this.mVideoRecvWidth);
                 sb.append("X");
@@ -522,14 +530,14 @@ public class HUDStatistics {
                 sb.append(this.mVideoDecodeMs);
                 sb.append("ms\n");
             }
-            if ((i2 & 4) != 0) {
+            if ((i & 4) != 0) {
                 sb.append("AudioOutput: ");
                 sb.append(this.mAudioSendBitrate);
                 sb.append(" | ");
                 sb.append(this.mAudioSendCodec);
-                sb.append(StringUtils.LF);
+                sb.append("\n");
             }
-            if ((i2 & 1) != 0) {
+            if ((i & 1) != 0) {
                 sb.append("AudioRecv: ");
                 sb.append(this.mAudioRecvBitrate);
                 sb.append(" | ");
@@ -541,7 +549,7 @@ public class HUDStatistics {
                 sb.append("| (buffer)");
                 sb.append(this.mAudioJitterBufferMs);
                 sb.append("ms");
-                sb.append(StringUtils.LF);
+                sb.append("\n");
             }
             return sb.toString();
         }
